--- a/index.html
+++ b/index.html
@@ -49,5 +49,7 @@
                 <li>Practice coding challenges on a coding platform</li>
                 <li>Update my portfolio website with recent projects</li>
             </ol>
+
+            <img src="Asset/Foto Drone.JPG" alt="Foto Drone" width="500" height="300">>
         </body>
     </html>
